Various up-to-date bringing and bug fixes.